Create endpoint /api/routes/import POST
